<resources>

    <string name="app_name">Shout</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Shout!</string>
    
    <string name="menu_settings">Settings</string>
   	<string name="menu_save">Save</string>
    <string name="menu_about">About</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_map">Map</string>
    <string name="menu_shout">Shout</string>
    <string name="edit_message">Enter a message</string>
    <string name="button">Shout</string>
    <string name="no_notes">No Friends Yet</string>
    <string name="menu_insert">Add Friend</string>
    <string name="menu_delete">Delete Friend</string>
    <string name="title">Name</string>
    <string name="body">Information</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Add Friend</string>
    <string name="test">Testing</string>
    <string name="consumer_key">RDz60E-yLIYPLruG7vAVxw</string>
    <string name="consumer_secret">oDgPzBHqTbtapTTEJLPNUg2WLJw</string>
    <string name="token">oChH69nVGaTZlAC8e3I0xeiulJ0Q8fov</string>
    <string name="token_secret">tKh5mJ8vfesbbV_jIz61K8MX3dE</string>
    

</resources>