<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_options"
          android:icon="@drawable/gear1"
          android:title="@string/menu_settings"
           android:showAsAction="ifRoom|withText">
    
   		 <menu>
		 <group android:id="@+id/menu_save2">
        <item android:id="@+id/menu_insert"
              android:title="@string/menu_insert" />
        <item android:id="@+id/menu_map"
              android:title="@string/menu_map" />
        <item android:id="@+id/menu_delete"
              android:title="@string/menu_about" />
        </group> 
        
		 </menu>
		 </item>
		 
    <item android:id="@+id/menu_shout"
          android:icon="@drawable/shout"
          android:title="@string/menu_shout"
          android:showAsAction="ifRoom|withText" />
    
</menu>